--- a/assets/style.css
+++ b/assets/style.css
@@ -1,16 +1,63 @@
+body {
+     margin: 0;
+     padding: 0;
+     background-color: #ffffff;
+     color: #1e2329;
+}
+
 .container {
-     font-family: Vazirmatn, sans-serif;
-     display: flex;
-     flex-direction: column;
-     align-items: right;
+     font-family: 'Sahel', sans-serif;
      justify-content: right;
      text-align: right;
+     margin: 0px;
+     padding: 50px;
+}
+
+.text-center {
+     text-align: center;
+}
+
+p span {
+     width: auto;
+     height: 1rem;
+     font-size: .85rem;
+     line-height: 1rem;
+     padding-left: 0.438rem;
+     padding-right: 0.438rem;
+     border-color: transparent;
+     --tw-bg-opacity: 1;
+     --tw-text-opacity: 1;
+     background-color: #49a773;
+     color: #ffffff;
+     align-items: center;
+     justify-content: center;
+     border-width: 1px;
+     border-radius: 1.9rem;
+}
+
+h1, h3 {
      margin: 0;
-     width: 100%;
-     height: auto;
+}
+
+h2 {
+     margin: 0 0 2% 0;
 }
 
 p {
+     margin: 2% 0;
      text-align: right;
      direction: rtl;
+}
+
+.copyright {
+     margin-top: 2%;
+     padding-top: 1%;
+     font-weight: bold;
+}
+
+.command {
+     border: 3px solid #1e2329;
+     /* border-radius: 15px; */
+     margin: 2% 0;
+     padding: 2%;
 }
